maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:45: error: ':' expected but ')' found.
  def isDirectionFree(dir):Boolean {
                         ^Escaper:55: error: identifier expected but '}' found.
} 
^